@@ -13,7 +13,7 @@ function usage()
   echo "Usage: isabelle $PRG [OPTIONS] [FILE]"
   echo
   echo "  Options are:"
-  echo "    -o FORMAT    specify output format: pdf (default), dvi, bbl, idx, sty, syms"
+  echo "    -o FORMAT    specify output format: pdf (default), dvi, bbl, idx, sty"
   echo
   echo "  Run LaTeX (and related tools) on FILE (default root.tex),"
   echo "  producing the specified output format."
@@ -83,16 +83,6 @@ function copy_styles ()
   done
 }
 
-function extract_syms ()
-{
-  perl -n \
-    -e '(!m,%requires, || m,%requires amssymb, || m,%requires textcomp,) && m,\\newcommand\{\\isasym(\w+)\}, && print "$1\n";' \
-    "$ISABELLE_HOME/lib/texinputs/isabellesym.sty" > "$DIR/syms.lst"
-  perl -n \
-    -e 'm,\\newcommand\{\\isactrl(\w+)\}, && print "$1\n";' \
-    "$ISABELLE_HOME/lib/texinputs/isabelle.sty" > "$DIR/ctrls.lst"
-}
-
 case "$OUTFORMAT" in
   pdf)
     check_root && \
@@ -116,10 +106,6 @@ case "$OUTFORMAT" in
     ;;
   sty)
     copy_styles
-    RC="$?"
-    ;;
-  syms)
-    extract_syms
     RC="$?"
     ;;
   *)
